@@ -1,1 +1,2 @@
 lynch.txt
+*.pyc
